<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlarmSet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:textColor="@drawable/selector_button"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/time"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/minute"
            android:textSize="50dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_set_time"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/time" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_memo"
            android:textColor="@drawable/selector_button"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_memo_prescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_B"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            style="@style/set_byn_dz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp"
            android:background="@drawable/icon"
            android:text="@string/back_btn" />

        <Button
            android:id="@+id/btn_set_list"
            style="@style/set_byn_dz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon"
            android:text="@string/set_btn" />

    </LinearLayout>

</LinearLayout>